data/all_generated_tests/raw_wast_tests/loop_UnreachableCodeExecution_378.wast
;; 9. **Loop with Conditional Branch Within Unreachable Path**:    - Implement a loop with a conditional branch inside a block that contains an `unreachable` instruction and should naturally lead away from the `unreachable`.    - **Constraint**: Validates conditional branching paths within correct contexts.    - **Relation to Unreachable Code Execution**: Ensures that paths conditionally leading away from `unreachable` do not inadvertently trigger it.

(assert_invalid
  (module
    (func $loop_conditional_unreachable (result i32)
      i32.const 1
      loop (result i32)
        i32.const 0
        br_if 0
        unreachable
      end
    )
  )
  "type mismatch"
)